fix: map control dropdown z-index

--- a/src/components/dropdown/styles.scss
+++ b/src/components/dropdown/styles.scss
@@ -23,6 +23,7 @@
   right: 0;
   min-width: 150px;
   color: white;
+  z-index: 300;
 }
 
 .icon {
